feat: Integración de auth-service en backend y frontend